@@ -1,12 +1,7 @@
 {
-  "count": 32,
+  "count": 30,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 2,
