@@ -1,3 +1,12 @@
+2023-07-05T01:57:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5459735528 # 576
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
+* notice: last 14d: unq all: 6 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 167 378 / 184 410
+* notice: next accum: outdated-unq outdated-all / unq all: 168 380 / 184 410
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-20] / []
+
 2022-12-11T08:20:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3668112113 # 308
 * notice: last 14d: unq all: 3 14
